# teampla

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.tsbuildinfo  vitest.config.ts
.claude/: CLAUDE.md  settings.local.json
api/: index.py
app/: main.py
app/core/: database.py
app/models/: __init__.py  member.py  preset.py  team.py
app/routers/: export.py  members.py  presets.py  teams.py
app/schemas/: export.py  member.py  preset.py  team.py
app/services/: export.py  randomizer.py
docs/: architect_changes.md  learn.md
prisma/: schema.prisma
src/: auth.config.ts  auth.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(admin)/presets/: page.tsx
src/app/(admin)/randomizer/: page.tsx
src/app/(admin)/teams/: page.tsx
src/app/(auth)/login/: page.tsx
src/components/export/: ExportMenu.tsx
src/components/layout/: Navbar.tsx  Sidebar.tsx
src/components/members/: MemberForm.tsx  WeeklyScheduleGrid.tsx
src/components/profile/: ProfileForm.tsx
src/components/randomizer/: ConflictBanner.tsx  RandomizerPanel.tsx
src/components/teams/: MemberCard.tsx  TeamBoard.tsx  TeamCard.tsx  WorkloadBadge.tsx
src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  Select.tsx
src/components/workspace/: AddMemberModal.tsx  MembersPanel.tsx
src/lib/: authUtils.ts  export.ts  prisma.ts  randomizer.ts  types.ts  utils.ts  validators.ts
src/store/: randomizerStore.ts  teamsStore.ts
src/tests/: export.test.ts  randomizer.test.ts  testUtils.ts  validators.test.ts
(+13 files in other folders)
