[project]
name = "teampla"
version = "0.1.0"
description = "IT team formation tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "python-multipart>=0.0.20",
    "mangum>=0.19.0",
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
